# PersonaLens

./: .env.example  .gitignore  LICENSE  README.md  dev-web.sh  install.sh  persona-quality-review-agent.md  pyproject.toml  restart-web.sh  review-output-schema.json  run-web.sh  set-gemini-key.sh  start-web.sh
.claude/agents/: judge-mega-1776734317191-prompt_pipeline.md  judge-mega-1776734317191-review_quality.md  judge-mega-1776734317191-web_ux_quality.md
.mega/: project.json  scan-result.json
.mega/agent-eval/: calibration.json  roster.json  wisdom-prompt_pipeline.md  wisdom-review_quality.md
.mega/evaluations/: judge_prompt_pipeline_memory.md  judge_review_quality_memory.md  judge_web_ux_quality_memory.md
.mega/evaluations/final/: critic_prompt_pipeline.json  critic_review_quality.json  critic_web_ux_quality.json  judge_prompt_pipeline.json  judge_review_quality.json  judge_summary.json  judge_web_ux_quality.json
.mega/evaluations/v0/: judge_prompt_pipeline.json  judge_review_quality.json  judge_summary.json  judge_web_ux_quality.json
.mega/evaluations/v1/: critic_prompt_pipeline.json  diff.patch  judge_prompt_pipeline.json  judge_review_quality.json  judge_summary.json  judge_web_ux_quality.json
.mega/feedback/: feedback_iteration_0.json  feedback_iteration_1.json  feedback_iteration_2.json  feedback_iteration_3.json  feedback_iteration_4.json  feedback_iteration_5.json
.mega/logs/: pcr-status.jsonl
.mega/prd/: prd-personalens.md
.mega/research/: dep-graph.json  exploration-report.md  stack-report.md
examples/: brief.json
scripts/: watch_and_serve.py
skill-template/: SKILL.md
src/personalens/: __init__.py  __main__.py  agent.py  cli.py  diagnostics.py  gemini.py  interactive.py  markdown_report.py  models.py  service.py  skill_helper.py  slack_bridge.py  slack_server.py  webapp.py  webpage.py
src/quality_review_agent/: agent.py  cli.py  gemini.py  interactive.py  markdown_report.py  service.py  skill_helper.py  webapp.py
tests/: test_diagnostics.py  test_gemini.py  test_service.py  test_slack_bridge.py  test_slack_server.py  test_webpage.py
(+25 files in other folders)
