[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-review-agent"
version = "0.1.0"
description = "Persona-based service quality review agent scaffold"
requires-python = ">=3.11"

[project.scripts]
quality-review-agent = "quality_review_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
