[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personalens"
version = "0.1.0"
description = "Persona-based service quality review agent scaffold"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "D-AI" }]

[project.scripts]
personalens = "personalens.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
